feat: integrate react compiler and add collect detailed render information

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Address Form App</title>
   </head>
   <body>
+    <div id="render-stats" class="render-stats">
+      <ul>
+      </ul>
+    </div>
     <div id="app"></div>
     <script type="module" src="/dist/main.js"></script>
   </body>
