feat: add prettier and format project

--- a/compiled.html
+++ b/compiled.html
@@ -2,15 +2,25 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="https://i.pinimg.com/564x/be/6e/30/be6e30b5f785278644c4e4e019cde02d.jpg" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://i.pinimg.com/564x/be/6e/30/be6e30b5f785278644c4e4e019cde02d.jpg"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/src/styles/reset.css" />
     <link rel="stylesheet" href="/src/styles/main.css" />
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-          integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
-          crossorigin=""/>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+      crossorigin=""
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Address Form App</title>
   </head>
@@ -22,13 +32,10 @@
       </div>
       <div id="render-stats" class="render-stats">
         <h1>Render Stats</h1>
-        <ul>
-        </ul>
+        <ul></ul>
       </div>
     </main>
-    <footer>
-      Go to the <a href="/non-compiled">non compiled version</a>.
-    </footer>
+    <footer>Go to the <a href="/non-compiled">non compiled version</a>.</footer>
     <script type="module" src="/dist/compiled-app.bundle.js"></script>
   </body>
 </html>
