feat: add presentation content

--- a/compiled.html
+++ b/compiled.html
@@ -35,7 +35,7 @@
         <ul></ul>
       </div>
     </main>
-    <footer>Go to the <a href="/non-compiled">non compiled version</a>.</footer>
+    <footer>Go to the <a href="/non-compiled">non compiled version</a> or <a href="/">presentation</a>.</footer>
     <script type="module" src="/dist/compiled-app.bundle.js"></script>
   </body>
 </html>
