--- a/non-compiled.html
+++ b/non-compiled.html
@@ -35,7 +35,7 @@
         <ul></ul>
       </div>
     </main>
-    <footer>Go to the <a href="/compiled">compiled version</a>.</footer>
+    <footer>Go to the <a href="/compiled">compiled version</a> or <a href="/">presentation</a>.</footer>
     <script type="module" src="/dist/non-compiled-app.bundle.js"></script>
   </body>
 </html>
