refactor: improve compatibility with GitHub pages

--- a/compiled.html
+++ b/compiled.html
@@ -13,8 +13,8 @@
       href="https://fonts.googleapis.com/css2?family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/src/styles/reset.css" />
-    <link rel="stylesheet" href="/src/styles/main.css" />
+    <link rel="stylesheet" href="/react-compiler-presentation/src/styles/reset.css" />
+    <link rel="stylesheet" href="/react-compiler-presentation/src/styles/main.css" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
@@ -35,7 +35,7 @@
         <ul></ul>
       </div>
     </main>
-    <footer>Go to the <a href="/non-compiled">non compiled version</a> or <a href="/">presentation</a>.</footer>
-    <script type="module" src="/dist/compiled-app.bundle.js"></script>
+    <footer>Go to the <a href="/react-compiler-presentation/non-compiled">non compiled version</a>.</footer>
+    <script type="module" src="/react-compiler-presentation/dist/compiled-app.bundle.js"></script>
   </body>
 </html>
