--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/5.1.0/reveal.min.css" integrity="sha512-0AUO8B5ll9y1ERV/55xq3HeccBGnvAJQsVGitNac/iQCLyDTGLUBMPqlupIWp/rJg0hV3WWHusXchEIdqFAv1Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/5.1.0/theme/white.min.css" integrity="sha512-NJYOiL4HPnu7QvvGcvHAnVVz2X6qWcTDAH4x3fmUOW/SGUbK46IbzHhQ1KoKDfK2trs5RwUu03Ax9sxjqz1iQw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/5.1.0/plugin/highlight/zenburn.min.css" integrity="sha512-JPxjD2t82edI35nXydY/erE9jVPpqxEJ++6nYEoZEpX2TRsmp2FpZuQqZa+wBCen5U16QZOkMadGXHCfp+tUdg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/public/presentation-styles.css" />
+    <link rel="stylesheet" href="/react-compiler-presentation/public/presentation-styles.css" />
   </head>
   <body>
     <div class="reveal">
       <div class="slides">
         <section>
           <div class="side-by-side">
-            <img src="public/react_uwu_logo.png" height="165" alt="react logo">
+            <img src="/react-compiler-presentation/public/react_uwu_logo.png" height="165" alt="react logo">
             <h1>Compiler</h1>
           </div>
           <p>The near future of how we will use React</p>
@@ -237,11 +237,11 @@ export default [
         </section>
         <section>
           <p>Example compiler lint issue:</p>
-          <img src="public/react-compiler-eslint-example.png" alt="React Compiler Eslint Example">
+          <img src="/react-compiler-presentation/public/react-compiler-eslint-example.png" alt="React Compiler Eslint Example">
         </section>
         <section>
           <strong>Running healthcheck script</strong>
-          <img src="public/react-compiler-healthcheck-example.png" width="700" alt="React Compiler Healthcheck Example">
+          <img src="/react-compiler-presentation/public/react-compiler-healthcheck-example.png" width="700" alt="React Compiler Healthcheck Example">
         </section>
         <section>
           <p>We will integrate the React Compiler with Babel.</p>
@@ -296,7 +296,7 @@ module.exports = {
         </section>
         <section>
             <h3>🤯 What did the compiler do?</h3>
-            <img src="public/react-dev-tools-change-example.png" alt="React Dev Tools Change Example">
+            <img src="/react-compiler-presentation/public/react-dev-tools-change-example.png" alt="React Dev Tools Change Example">
         </section>
         <section>
           <h2>Let's Go Back to Our Select Component</h2>
