refactor: remove domain prefixes from iframe sources

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ const AddressSuggestions = () =&gt; {
         </section>
         <section>
           <div class="side-by-side text-align-start">
-            <iframe data-src="http://localhost:3000/non-compiled" data-preload width="700" height="600"></iframe>
+            <iframe data-src="/non-compiled" data-preload width="700" height="600"></iframe>
             <div class="fragment margin-inline-start" style="max-width: 300px;">
               <h5>Issues</h5>
               <ul class="small-list">
@@ -292,7 +292,7 @@ module.exports = {
           <h1>That's it ? 🤔</h1>
         </section>
         <section>
-          <iframe data-src="http://localhost:3000/compiled" data-preload width="700" height="600"></iframe>
+          <iframe data-src="/compiled" data-preload width="700" height="600"></iframe>
         </section>
         <section>
             <h3>🤯 What did the compiler do?</h3>
