refactor: change progressive moving text placements

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ function FormProvider({ children }) {
           </section>
           <section>
             <h2>What we have (2)</h2>
-            <p>A few controlled form components like this:</p>
+            <p>Two controlled form components like this:</p>
             <pre>
               <code class="language-typescript" data-line-numbers="1-26|15-21">
 const Select = ({
@@ -354,7 +354,7 @@ function _temp(option) {
         </section>
         <section>
           <h4>Moving Progressive</h4>
-          <small>In case a component or hook doesn't work in beta phase:</small>
+          <p class="small-text">Directory/path based filter:</p>
           <pre>
             <code class="language-typescript">
 {
@@ -367,7 +367,7 @@ function _temp(option) {
 }
             </code>
           </pre>
-          <small>We can directory/path based filter for gradual migration:</small>
+          <p class="small-text"><code class="small-text">"use no memo";</code> directive:</p>
           <pre>
             <code class="language-typescript">
 function SuspiciousComponent() {
